RESOLVED FIXED 56849
REGRESSION: WK2: AX: PDF in Safari no longer accessible.
https://bugs.webkit.org/show_bug.cgi?id=56849
Summary REGRESSION: WK2: AX: PDF in Safari no longer accessible.
chris fleizach
Reported 2011-03-22 11:21:38 PDT
1) Open a page in Safari containing a PDF document. 2) Using VoiceOver, navigate to the scroll area. 3) Find that there appears to be nothing there.
Attachments
patch (3.00 KB, patch)
2011-03-22 11:27 PDT, chris fleizach
darin: review-
patch (3.55 KB, patch)
2011-03-22 18:27 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2011-03-22 11:27:22 PDT
Darin Adler
Comment 2 2011-03-22 18:09:54 PDT
Comment on attachment 86484 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=86484&action=review review- because of the bad cast; otherwise looks good > Source/WebKit2/UIProcess/API/mac/WKView.mm:1611 > + return [NSArray arrayWithObjects:child, nil]; This will return an empty array instead of nil in cases where the old code returned nil. How about calling [NSArray arrayWithObject:] explicitly in both cases above instead of using a local variable? > Source/WebKit2/UIProcess/API/mac/PDFViewController.h:55 > + WKView* pdfView() const { return static_cast<WKView*>(m_wkPDFView.get()); } This is a bad cast, and incorrect. This function should be not be inline. I should be in the .mm file where the compiler can see the WKPDFView class. And the return type should be NSView *.
chris fleizach
Comment 3 2011-03-22 18:27:25 PDT
WebKit Commit Bot
Comment 4 2011-03-23 00:19:39 PDT
The commit-queue encountered the following flaky tests while processing attachment 86554 [details]: inspector/debugger/debug-inlined-scripts.html bug 56900 (author: podivilov@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2011-03-23 00:22:00 PDT
Comment on attachment 86554 [details] patch Clearing flags on attachment: 86554 Committed r81755: <http://trac.webkit.org/changeset/81755>
WebKit Commit Bot
Comment 6 2011-03-23 00:22:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.