2011-03-23  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Darin Adler.

        REGRESSION: WK2: AX: PDF in Safari no longer accessible.
        https://bugs.webkit.org/show_bug.cgi?id=56849

        The WKView needs to know when to return the WKPDFView and when to return
        the remote web process connection.

        * UIProcess/API/mac/PDFViewController.h:
        (WebKit::PDFViewController::pdfView):
        * UIProcess/API/mac/WKView.mm:
        (-[WKView accessibilityFocusedUIElement]):
        (-[WKView accessibilityHitTest:]):
        (-[WKView accessibilityAttributeValue:]):

Canonical link: https://commits.webkit.org/71579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81755 268f45cc-cd09-0410-ab3c-d52691b4dbfc